Upload project first time

--- a/about.html
+++ b/about.html
@@ -11,11 +11,27 @@
     <a href="index.html">Home</a>
     <a href="about.html">About Us</a>
     <a href="contact.html">Contact Us</a>
-    <a href="beach.html">Beaches</a>
-    <a href="temple.html">Temples</a>
-    <a href="country.html">Countries</a>
   </nav>
+
   <h1>About Us</h1>
-  <p>We help users find their ideal travel destinations through interactive and engaging suggestions.</p>
+
+  <section>
+    <p>Welcome to <strong>Travel Suggestions</strong> – your ultimate companion for discovering amazing travel destinations around the world.</p>
+    
+    <h2>Our Mission</h2>
+    <p>Our mission is to help travelers easily explore and choose destinations that suit their preferences, whether it's sunny beaches, ancient temples, or vibrant countries.</p>
+    
+    <h2>What We Offer</h2>
+    <ul>
+      <li>📍 A curated list of destinations across categories: beaches, temples, and countries.</li>
+      <li>🔎 Dynamic search and filtering features to help you find what you’re looking for quickly.</li>
+      <li>🖼️ Visuals and descriptions for every location to give you a preview before you go.</li>
+    </ul>
+
+    <h2>Why Choose Us?</h2>
+    <p>We combine simplicity with helpful features to bring you a smooth and enjoyable experience while discovering new travel destinations.</p>
+
+    <p>Choose us for an easy and friendly way to explore amazing places and plan your next adventure with confidence!</p>
+  </section>
 </body>
 </html>
