--- a/country.html
+++ b/country.html
@@ -1,22 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Countries</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About Us</a>
     <a href="contact.html">Contact Us</a>
-    <a href="beach.html">Beaches</a>
-    <a href="temple.html">Temples</a>
-    <a href="country.html">Countries</a>
   </nav>
+
   <h1>Country Recommendations</h1>
-  <img src="images/Country2.jpg" alt="Country 1">
-  <img src="images/Country3.jpg" alt="Country 2">
+  <div class="category">
+    <img src="images/japan1.jpg" alt="Japan" class="section-image" />
+    <p>Japan - Explore Mount Fuji, sakura, and rich culture.</p>
+  </div>
+  <div class="category">
+    <img src="images/vietnam1.jpg" alt="Vietnam " class="section-image" />
+    <p>Vietnam  - Discover the misty mountains and ethnic villages.</p>
+  </div>
+  <div class="category">
+    <img src="images/usa1.jpg" alt="USA" class="section-image" />
+    <p>USA - Land of diversity, from skyscrapers to national parks.</p>
+  </div>
+
+  <div class="category">
+    <img src="images/south_korea1.jpg" alt="South Korea" class="section-image" />
+    <p>South Korea - A mix of tradition and cutting-edge technology.</p>
+  </div>
+
+  <div class="category">
+    <img src="images/china1.jpg" alt="China" class="section-image" />
+    <p>China - Home to the Great Wall, rich history, and vast landscapes.</p>
+  </div>
 </body>
+<style>.category {
+  margin: 20px auto;
+  max-width: 600px;
+  text-align: center;
+}
+
+.category img.section-image {
+  width: 90%;
+  max-width: 500px;
+  height: auto;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.category p {
+  font-size: 1rem;
+  color: #333;
+}
+.category {
+  margin: 20px auto;
+  max-width: 600px;
+  text-align: center;
+}
+
+.category img.section-image {
+  width: 90%;
+  max-width: 500px;
+  height: auto;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.category p {
+  font-size: 1rem;
+  color: #333;
+}
+</style>
 </html>
