--- a/contact.html
+++ b/contact.html
@@ -11,17 +11,44 @@
     <a href="index.html">Home</a>
     <a href="about.html">About Us</a>
     <a href="contact.html">Contact Us</a>
-    <a href="beach.html">Beaches</a>
-    <a href="temple.html">Temples</a>
-    <a href="country.html">Countries</a>
   </nav>
+
   <h1>Contact Us</h1>
+  <p>If you have any questions, suggestions, or feedback, feel free to reach out. We'd love to hear from you!</p>
+
   <form>
-    <label for="email">Email:</label>
+    <label for="email"><strong>Email:</strong></label><br>
     <input type="email" id="email" name="email" required><br><br>
-    <label for="message">Message:</label><br>
-    <textarea id="message" name="message" rows="5" cols="30" required></textarea><br><br>
+
+    <label for="message"><strong>Message:</strong></label><br>
+    <textarea id="message" name="message" rows="5" cols="40" required></textarea><br><br>
+
     <button type="submit">Send</button>
   </form>
 </body>
+<style>
+  form {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 8px rgba(0,0,0,0.1);
+  max-width: 500px;
+  margin: 20px auto;
+}
+input, textarea {
+  width: 100%;
+  padding: 10px;
+  margin-top: 5px;
+}
+button {
+  padding: 10px 20px;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+button:hover {
+  background-color: #555;
+}
+</style>
 </html>
