--- a/temple.html
+++ b/temple.html
@@ -1,22 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Temples</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About Us</a>
     <a href="contact.html">Contact Us</a>
-    <a href="beach.html">Beaches</a>
-    <a href="temple.html">Temples</a>
-    <a href="country.html">Countries</a>
   </nav>
+
   <h1>Temple Recommendations</h1>
-  <img src="images/temple.jpg" alt="Temple 1">
-  <img src="images/Country1.jpg" alt="Temple 2">
+  <div class="category">
+    <img src="images/tran_quoc1.jpg" alt="Tran Quoc Pagoda" class="section-image" />
+    <p>Tran Quoc Pagoda - The oldest Buddhist temple in Hanoi.</p>
+  </div>
+  <div class="category">
+    <img src="images/one_pillar1.jpg" alt="One Pillar Pagoda" class="section-image" />
+    <p>One Pillar Pagoda - Symbol of Vietnam’s spiritual heritage.</p>
+  </div>
 </body>
+<style>.category {
+  margin: 20px auto;
+  max-width: 600px;
+  text-align: center;
+}
+
+.category img.section-image {
+  width: 90%;
+  max-width: 500px;
+  height: auto;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.category p {
+  font-size: 1rem;
+  color: #333;
+}
+.category {
+  margin: 20px auto;
+  max-width: 600px;
+  text-align: center;
+}
+
+.category img.section-image {
+  width: 90%;
+  max-width: 500px;
+  height: auto;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.category p {
+  font-size: 1rem;
+  color: #333;
+}
+</style>
 </html>
