Update full project ALL

--- a/about.html
+++ b/about.html
@@ -1,37 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us</title>
-  <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>About Us - Fun_Travel</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About Us</a>
-    <a href="contact.html">Contact Us</a>
+    <!-- <div class="logo">Fun_Travel</div> -->
+    <div class="nav-links" style="text-align: center;">
+      <a href="index.html">Home</a>
+      <a href="about.html">About Us</a>
+      <a href="contact.html">Contact Us</a>
+    </div>
   </nav>
 
-  <h1>About Us</h1>
+  <header style="background: url('images/vietnam2.jpg') center/cover no-repeat; padding: 100px 0; text-align: center; color: white;">
+    <h1 style="font-size: 3rem; text-shadow: 2px 2px 4px #000;">About Fun_Travel</h1>
+  </header>
 
-  <section>
-    <p>Welcome to <strong>Travel Suggestions</strong> – your ultimate companion for discovering amazing travel destinations around the world.</p>
-    
-    <h2>Our Mission</h2>
-    <p>Our mission is to help travelers easily explore and choose destinations that suit their preferences, whether it's sunny beaches, ancient temples, or vibrant countries.</p>
-    
-    <h2>What We Offer</h2>
-    <ul>
-      <li>📍 A curated list of destinations across categories: beaches, temples, and countries.</li>
-      <li>🔎 Dynamic search and filtering features to help you find what you’re looking for quickly.</li>
-      <li>🖼️ Visuals and descriptions for every location to give you a preview before you go.</li>
-    </ul>
+  <section style="
+  max-width: 900px;
+  margin: 50px auto;
+  padding: 40px;
+  background: linear-gradient(to right, #f8f9fa, #ffffff);
+  box-shadow: 0 8px 24px rgba(0,0,0,0.1);
+  border-radius: 15px;
+  font-family: 'Segoe UI', sans-serif;
+  color: #333;
+  line-height: 1.6;
+">
+  <h2 style="font-size: 2rem; margin-bottom: 20px; color: #2c3e50;">🌏 Who We Are</h2>
+  <p>
+    <strong>Fun_Travel</strong> is a Vietnamese-based travel recommendation platform dedicated to showcasing the beauty of Asia to the world.
+    We aim to help travelers discover cultural wonders, breathtaking nature, and hidden gems across the continent.
+  </p>
+  <p>
+    Whether it's a serene beach in Vietnam, an ancient temple in Japan, or a vibrant city in South Korea,
+    our goal is to inspire meaningful journeys and unforgettable experiences.
+  </p>
 
-    <h2>Why Choose Us?</h2>
-    <p>We combine simplicity with helpful features to bring you a smooth and enjoyable experience while discovering new travel destinations.</p>
+  <h2 style="font-size: 2rem; margin: 30px 0 20px; color: #2c3e50;">🎯 Our Mission</h2>
+  <p>
+    Our mission is to connect travelers with authentic destinations, starting from where we are – <strong>Vietnam</strong> – and expanding throughout Asia.
+    We believe in affordable, enriching travel that celebrates both nature and culture.
+  </p>
 
-    <p>Choose us for an easy and friendly way to explore amazing places and plan your next adventure with confidence!</p>
-  </section>
+  <h2 style="font-size: 2rem; margin: 30px 0 20px; color: #2c3e50;">👥 Our Team</h2>
+  <div style="display: flex; flex-wrap: wrap; gap: 20px;">
+    <div style="flex: 1 1 250px; background: #f0f2f5; padding: 20px; border-radius: 10px;">
+      <h3 style="margin-bottom: 5px;">Nguyen Van A</h3>
+      <p style="font-size: 0.95rem; color: #555;">Team Leader & Content Curator</p>
+    </div>
+    <div style="flex: 1 1 250px; background: #f0f2f5; padding: 20px; border-radius: 10px;">
+      <h3 style="margin-bottom: 5px;">Tran Thi B</h3>
+      <p style="font-size: 0.95rem; color: #555;">Developer & UX Designer</p>
+    </div>
+    <div style="flex: 1 1 250px; background: #f0f2f5; padding: 20px; border-radius: 10px;">
+      <h3 style="margin-bottom: 5px;">Le Van C</h3>
+      <p style="font-size: 0.95rem; color: #555;">Researcher & Marketing Assistant</p>
+    </div>
+  </div>
+</section>
 </body>
 </html>
