--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact Us</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css" />
+  <style>
+    nav {
+  background-color: #000;
+  color: white;
+  padding: 10px 0;
+  display: flex;
+  justify-content: center; /* 👈 Center horizontally */
+  align-items: center;
+  gap: 30px;
+}
+nav a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 16px;
+}
+nav a:hover {
+  text-decoration: underline;
+}
+    body {
+      font-family: sans-serif;
+      background-color: #f5f5f5;
+    }
+    h1, p {
+      text-align: center;
+    }
+    form {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.1);
+      max-width: 500px;
+      margin: 20px auto;
+    } 
+    input, textarea {
+      width: 100%;
+      padding: 10px;
+      margin-top: 5px;
+    }
+    button {
+      padding: 10px 20px;
+      background-color: #333;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #555;
+    }
+    #successMessage {
+      text-align: center;
+      color: green;
+      font-weight: bold;
+      display: none;
+      margin-top: 10px;
+    }
+  </style>
 </head>
 <body>
   <nav>
@@ -16,7 +73,10 @@
   <h1>Contact Us</h1>
   <p>If you have any questions, suggestions, or feedback, feel free to reach out. We'd love to hear from you!</p>
 
-  <form>
+  <form id="contactForm">
+    <label for="name"><strong>Name:</strong></label><br>
+    <input type="text" id="name" name="name" required><br><br>
+
     <label for="email"><strong>Email:</strong></label><br>
     <input type="email" id="email" name="email" required><br><br>
 
@@ -25,30 +85,22 @@
 
     <button type="submit">Send</button>
   </form>
+
+  <div id="successMessage">✅ Message sent successfully!</div>
+
+  <script>
+    const form = document.getElementById("contactForm");
+    const successMessage = document.getElementById("successMessage");
+
+    form.addEventListener("submit", function(event) {
+      event.preventDefault();     // Ngăn gửi thật
+      form.reset();               // Xoá dữ liệu
+      successMessage.style.display = "block"; // Hiện thông báo
+
+      setTimeout(() => {
+        successMessage.style.display = "none";
+      }, 3000);
+    });
+  </script>
 </body>
-<style>
-  form {
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 0 8px rgba(0,0,0,0.1);
-  max-width: 500px;
-  margin: 20px auto;
-}
-input, textarea {
-  width: 100%;
-  padding: 10px;
-  margin-top: 5px;
-}
-button {
-  padding: 10px 20px;
-  background-color: #333;
-  color: #fff;
-  border: none;
-  cursor: pointer;
-}
-button:hover {
-  background-color: #555;
-}
-</style>
 </html>
