--- a/about.html
+++ b/about.html
@@ -5,63 +5,132 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>About Us - Fun_Travel</title>
   <link rel="stylesheet" href="css/style.css" />
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #333;
+      margin: 0;
+      background: #f9f9f9;
+    }
+    nav {
+      background-color: #000;
+      display: flex;
+      justify-content: center;
+      padding: 12px 0;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: 500;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    header {
+      background: url('images/vietnam2.jpg') center/cover no-repeat;
+      padding: 10px 0;
+      text-align: center;
+      color: white;
+    }
+    header h1 {
+      font-size: 3rem;
+      color: #ffffff; /* hoặc #ffe066 */
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
+    }
+    section {
+      max-width: 900px;
+      margin: 50px auto;
+      padding: 40px;
+      background: #fff;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.1);
+      border-radius: 15px;
+      line-height: 1.6;
+    }
+    section h2 {
+      font-size: 1.75rem;
+      margin-bottom: 20px;
+      color: #2c3e50;
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 8px;
+    }
+    .team-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-top: 20px;
+    }
+    .team-member {
+      flex: 1 1 220px;
+      background: #f0f2f5;
+      padding: 20px;
+      border-radius: 10px;
+      text-align: center;
+    }
+    .team-member h3 {
+      margin: 0 0 5px 0;
+      font-size: 1.1rem;
+    }
+    .team-member p {
+      margin: 0;
+      font-size: 0.95rem;
+      color: #555;
+    }
+  </style>
 </head>
 <body>
+
   <nav>
-    <!-- <div class="logo">Fun_Travel</div> -->
-    <div class="nav-links" style="text-align: center;">
-      <a href="index.html">Home</a>
-      <a href="about.html">About Us</a>
-      <a href="contact.html">Contact Us</a>
-    </div>
+    <a href="index.html">Home</a>
+    <a href="about.html">About Us</a>
+    <a href="contact.html">Contact Us</a>
   </nav>
 
-  <header style="background: url('images/vietnam2.jpg') center/cover no-repeat; padding: 100px 0; text-align: center; color: white;">
-    <h1 style="font-size: 3rem; text-shadow: 2px 2px 4px #000;">About Fun_Travel</h1>
+  <header>
+    <h1>About Fun_Travel</h1>
   </header>
 
-  <section style="
-  max-width: 900px;
-  margin: 50px auto;
-  padding: 40px;
-  background: linear-gradient(to right, #f8f9fa, #ffffff);
-  box-shadow: 0 8px 24px rgba(0,0,0,0.1);
-  border-radius: 15px;
-  font-family: 'Segoe UI', sans-serif;
-  color: #333;
-  line-height: 1.6;
-">
-  <h2 style="font-size: 2rem; margin-bottom: 20px; color: #2c3e50;">🌏 Who We Are</h2>
-  <p>
-    <strong>Fun_Travel</strong> is a Vietnamese-based travel recommendation platform dedicated to showcasing the beauty of Asia to the world.
-    We aim to help travelers discover cultural wonders, breathtaking nature, and hidden gems across the continent.
-  </p>
-  <p>
-    Whether it's a serene beach in Vietnam, an ancient temple in Japan, or a vibrant city in South Korea,
-    our goal is to inspire meaningful journeys and unforgettable experiences.
-  </p>
+  <section>
+    <h2>About Fun_Travel</h2>
+    <p>
+      <strong>Fun_Travel</strong> is a Vietnam-based travel recommendation platform committed to showcasing the beauty of Asia to travelers worldwide.
+      We help explorers discover cultural wonders, breathtaking nature, and hidden gems across the continent.
+    </p>
+    <p>
+      Whether it's a peaceful beach in Vietnam, an ancient temple in Japan, or a vibrant city in South Korea,
+      our goal is to inspire meaningful journeys and unforgettable experiences.
+    </p>
 
-  <h2 style="font-size: 2rem; margin: 30px 0 20px; color: #2c3e50;">🎯 Our Mission</h2>
-  <p>
-    Our mission is to connect travelers with authentic destinations, starting from where we are – <strong>Vietnam</strong> – and expanding throughout Asia.
-    We believe in affordable, enriching travel that celebrates both nature and culture.
-  </p>
+    <!-- <h2>Our Mission</h2>
+    <p>
+      Our mission is to connect travelers with authentic destinations, starting from Vietnam and expanding throughout Asia.
+      We believe in affordable, enriching travel that celebrates both nature and culture.
+    </p> -->
 
-  <h2 style="font-size: 2rem; margin: 30px 0 20px; color: #2c3e50;">👥 Our Team</h2>
-  <div style="display: flex; flex-wrap: wrap; gap: 20px;">
-    <div style="flex: 1 1 250px; background: #f0f2f5; padding: 20px; border-radius: 10px;">
-      <h3 style="margin-bottom: 5px;">Nguyen Van A</h3>
-      <p style="font-size: 0.95rem; color: #555;">Team Leader & Content Curator</p>
+    <h2>Our Team</h2>
+    <div class="team-container">
+      <div class="team-member">
+        <h3>David Nguyen</h3>
+        <p>Founder & CEO</p>
+      </div>
+      <div class="team-member">
+        <h3>Anna Tran</h3>
+        <p>Team Leader & Content Curator</p>
+      </div>
+      <div class="team-member">
+        <h3>Michael Lee</h3>
+        <p>Developer & UX Designer</p>
+      </div>
+      <div class="team-member">
+        <h3>Emily Chen</h3>
+        <p>Researcher & Marketing Assistant</p>
+      </div>
+      <div class="team-member">
+        <h3>Sophia Pham</h3>
+        <p>Travel Expert</p>
+      </div>
     </div>
-    <div style="flex: 1 1 250px; background: #f0f2f5; padding: 20px; border-radius: 10px;">
-      <h3 style="margin-bottom: 5px;">Tran Thi B</h3>
-      <p style="font-size: 0.95rem; color: #555;">Developer & UX Designer</p>
-    </div>
-    <div style="flex: 1 1 250px; background: #f0f2f5; padding: 20px; border-radius: 10px;">
-      <h3 style="margin-bottom: 5px;">Le Van C</h3>
-      <p style="font-size: 0.95rem; color: #555;">Researcher & Marketing Assistant</p>
-    </div>
-  </div>
-</section>
+  </section>
+
 </body>
 </html>
